[gd_scene load_steps=16 format=3 uid="uid://b7axn3oiav56e"]

[ext_resource type="Script" path="res://Shaders/RichTextEffects/Rainbow.gd" id="1_7r0uo"]
[ext_resource type="Script" path="res://Scenes/Objects/3D/NotificationDisplay.gd" id="1_ulfi6"]
[ext_resource type="Theme" uid="uid://cvnq4qfcqydrk" path="res://Themes/NotificationTheme.tres" id="2_j7q1u"]
[ext_resource type="Texture2D" uid="uid://cak5jhut868j1" path="res://Images/Emotes/puby.png" id="3_78nbv"]
[ext_resource type="Script" path="res://Shaders/RichTextEffects/rumble.gd" id="4_p0vfn"]
[ext_resource type="AudioStream" uid="uid://ck40g5rkbkk08" path="res://Audio/SFX/MinecraftDogBark.mp3" id="6_rxscu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0hrn"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.784314)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="RichTextEffect" id="RichTextEffect_wlqxu"]
script = ExtResource("1_7r0uo")

[sub_resource type="RichTextEffect" id="RichTextEffect_fmhr6"]
script = ExtResource("4_p0vfn")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_eugff"]
thickness = 8

[sub_resource type="RichTextEffect" id="RichTextEffect_6cnn0"]
script = ExtResource("1_7r0uo")

[sub_resource type="RichTextEffect" id="RichTextEffect_a52j8"]
script = ExtResource("4_p0vfn")

[sub_resource type="Animation" id="Animation_owas5"]
resource_name = "Appear"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ImagePanel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1536.9, -0.25, 0, 0.5, -55.8693, 1021, -0.7, -0.0426636, 0.25, 0, 1021, -0.7, -0.0426636, 0.25, 0, 0.00012207, -0.25, 0, 0.25, 0, 0.00012207, -0.25, 0, 0.25, 0, 0.00012207, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.1, 1.6, 2, 4.5, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ImagePanel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 578.724, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.6, 2, 4.5, 5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ImagePanel/TextureRect:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.1, 1.2, 1.3, 1.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ImagePanel/TextureRect:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.1, 1.2, 1.3, 1.4, 1.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NotificationPanel:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(2050.1, -0.25, 0, 0.25, 0, 1536.9, -0.25, 0, 0.25, 0, 513.208, -0.25, 0, 0.25, 0, 513.208, -0.25, 0, 0.25, 0, 513.208, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.6, 2, 4.5, 5)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NotificationPanel:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 578.724, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.6, 2, 4.5, 5)
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0966096,
"start_offset": 0.0429376,
"stream": ExtResource("6_rxscu")
}, {
"end_offset": 0.0966096,
"start_offset": 0.0429376,
"stream": ExtResource("6_rxscu")
}],
"times": PackedFloat32Array(1.2, 1.4)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_d81ag"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ImagePanel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1536.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ImagePanel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ImagePanel/TextureRect:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ImagePanel/TextureRect:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NotificationPanel:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2050.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NotificationPanel:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2iew"]
_data = {
"Appear": SubResource("Animation_owas5"),
"RESET": SubResource("Animation_d81ag")
}

[node name="NotificationDisplay" type="Control"]
custom_minimum_size = Vector2(1536, 512)
layout_mode = 3
anchors_preset = 0
offset_left = 1358.0
offset_top = 892.0
offset_right = 2894.0
offset_bottom = 1404.0
scale = Vector2(0.366323, 0.366323)
script = ExtResource("1_ulfi6")
ImagePanelPositions = PackedVector2Array(0, 256)
metadata/_edit_vertical_guides_ = [-519.0]

[node name="ImagePanel" type="Control" parent="."]
custom_minimum_size = Vector2(512, 512)
layout_mode = 3
anchors_preset = 0
offset_left = 1536.9
offset_right = 2048.9
offset_bottom = 512.001

[node name="TextureRect" type="TextureRect" parent="ImagePanel"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 511.999
texture = ExtResource("3_78nbv")
expand_mode = 1
stretch_mode = 5

[node name="NotificationPanel" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1024, 512)
layout_mode = 3
anchors_preset = 0
offset_left = 2050.1
offset_right = 3074.1
offset_bottom = 512.001

[node name="Panel" type="Panel" parent="NotificationPanel"]
custom_minimum_size = Vector2(1024, 512)
layout_mode = 0
offset_right = 1024.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k0hrn")

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationPanel"]
layout_mode = 2
offset_right = 1024.0
offset_bottom = 107.0

[node name="TopLabel" type="RichTextLabel" parent="NotificationPanel/VBoxContainer"]
custom_minimum_size = Vector2(1024, 72)
layout_mode = 2
theme = ExtResource("2_j7q1u")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]fuck you you fucking dick"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
custom_effects = [SubResource("RichTextEffect_wlqxu"), SubResource("RichTextEffect_fmhr6")]

[node name="HSeparator" type="HSeparator" parent="NotificationPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_eugff")

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationPanel/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 423)
layout_mode = 2
alignment = 1

[node name="BottomLabel" type="RichTextLabel" parent="NotificationPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Thank you
[Rainbow]WigglyUsername42[/Rainbow]
for the follow!"
fit_content = true
custom_effects = [SubResource("RichTextEffect_6cnn0"), SubResource("RichTextEffect_a52j8")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v2iew")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
